--- a/index.html
+++ b/index.html
@@ -373,15 +373,19 @@
                 <div class="row" data-aos="fade-up" data-aos-delay="100">
                     <div class="col-lg-12 d-flex justify-content-center">
                         <ul id="portfolio-flters">
+                            <li data-filter="*">All</li>
                             <li data-filter=".filter-2021" class="filter-active">2021-2022</li>
                             <li data-filter=".filter-2020">2020-2021</li>
-                            <li data-filter="*">All</li>
                         </ul>
                     </div>
                 </div>
 
+                <div class="position-title">
+                    <h3>PIC & General Secretary</h3>
+                </div>
+
                 <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-                    <div class="col-lg-3 col-md-6 portfolio-item filter-2021">
+                    <div class="col-lg-3 col-md-6 portfolio-item d-flex align-items-stretch filter-2021">
                         <div class="member">
                             <div class="member-img">
                                 <img src="assets/img/team/2021/dr.sujoy.jpg" class="img-fluid" alt="">
@@ -397,7 +401,23 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-6 portfolio-item filter-2021 filter-2020">
+                    <div class="col-lg-3 col-lg-offset-3 col-md-6 portfolio-item filter-2020">
+                        <div class="member">
+                            <div class="member-img">
+                                <img src="assets/img/team/2020/murshid.jpg" class="img-fluid" alt="">
+                                <div class="social">
+                                    <a href=""><i class="icofont-email"></i></a>
+                                </div>
+                            </div>
+
+                            <div class="member-info">
+                                <h4>Dr. Murshid Imam</h4>
+                                <span>PIC Technical Affairs</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 portfolio-item d-flex align-items-stretch filter-2021 filter-2020">
                         <div class="member">
                             <div class="member-img">
                                 <img src="assets/img/team/2021/satyam.jpg" class="img-fluid" alt="">
@@ -413,6 +433,14 @@
                         </div>
                     </div>
 
+                </div>
+
+                <div class="position-title">
+                    <h3>UG Representatives</h3>
+                </div>
+
+                <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+
                     <div class="col-lg-3 col-md-6 portfolio-item filter-2021">
                         <div class="member">
                             <div class="member-img">
@@ -424,6 +452,22 @@
 
                             <div class="member-info">
                                 <h4>Rishikesh Devanathan</h4>
+                                <span>Technical Secretary, Sophomore Year</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 portfolio-item filter-2020">
+                        <div class="member">
+                            <div class="member-img">
+                                <img src="assets/img/team/2020/shivam-sahu.jpg" class="img-fluid" alt="">
+                                <div class="social">
+                                    <a href=""><i class="icofont-email"></i></a>
+                                </div>
+                            </div>
+
+                            <div class="member-info">
+                                <h4>Shivam Sahu</h4>
                                 <span>Technical Secretary, Sophomore Year</span>
                             </div>
                         </div>
@@ -461,6 +505,22 @@
                         </div>
                     </div>
 
+                    <div class="col-lg-3 col-md-6 portfolio-item filter-2020">
+                        <div class="member">
+                            <div class="member-img">
+                                <img src="assets/img/team/2020/piyush-tiwary.jpg" class="img-fluid" alt="">
+                                <div class="social">
+                                    <a href=""><i class="icofont-email"></i></a>
+                                </div>
+                            </div>
+
+                            <div class="member-info">
+                                <h4>Piyush Tiwary</h4>
+                                <span>Technical Secretary, Senior Year</span>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="col-lg-3 col-md-6 portfolio-item filter-2021">
                         <div class="member">
                             <div class="member-img">
@@ -477,6 +537,30 @@
                         </div>
                     </div>
 
+                    <div class="col-lg-3 col-md-6 portfolio-item filter-2020">
+                        <div class="member">
+                            <div class="member-img">
+                                <img src="assets/img/team/2020/shreya-sinha.jpg" class="img-fluid" alt="">
+                                <div class="social">
+                                    <a href=""><i class="icofont-email"></i></a>
+                                </div>
+                            </div>
+
+                            <div class="member-info">
+                                <h4>Shreya Sinha</h4>
+                                <span>Technical Secretary, UG Girls</span>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="position-title">
+                    <h3>PG & PhD Representatives</h3>
+                </div>
+
+                <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+
                     <div class="col-lg-3 col-md-6 portfolio-item filter-2021">
                         <div class="member">
                             <div class="member-img">
@@ -488,6 +572,22 @@
 
                             <div class="member-info">
                                 <h4>Akanksha Gupta</h4>
+                                <span>Technical Secretary, PG Girls</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 portfolio-item filter-2020">
+                        <div class="member">
+                            <div class="member-img">
+                                <img src="assets/img/team/2020/nidhi-jha.jpg" class="img-fluid" alt="">
+                                <div class="social">
+                                    <a href=""><i class="icofont-email"></i></a>
+                                </div>
+                            </div>
+
+                            <div class="member-info">
+                                <h4>Nidhi Jha</h4>
                                 <span>Technical Secretary, PG Girls</span>
                             </div>
                         </div>
@@ -509,104 +609,6 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-6 portfolio-item filter-2021">
-                        <div class="member">
-                            <div class="member-img">
-                                <img src="assets/img/team/2021/sunil.jpg" class="img-fluid" alt="">
-                                <div class="social">
-                                    <a href="mailto:sunil_1921me01@iitp.ac.in"><i class="icofont-email"></i></a>
-                                </div>
-                            </div>
-
-                            <div class="member-info">
-                                <h4>Sunil</h4>
-                                <span>Technical Secretary, PhD</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- 2020-2019 Team -->
-
-                    <div class="col-lg-3 col-md-6 portfolio-item filter-2020">
-                        <div class="member">
-                            <div class="member-img">
-                                <img src="assets/img/team/2020/murshid.jpg" class="img-fluid" alt="">
-                                <div class="social">
-                                    <a href=""><i class="icofont-email"></i></a>
-                                </div>
-                            </div>
-
-                            <div class="member-info">
-                                <h4>Dr. Murshid Imam</h4>
-                                <span>PIC Technical Affairs</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-3 col-md-6 portfolio-item filter-2020">
-                        <div class="member">
-                            <div class="member-img">
-                                <img src="assets/img/team/2020/shivam-sahu.jpg" class="img-fluid" alt="">
-                                <div class="social">
-                                    <a href=""><i class="icofont-email"></i></a>
-                                </div>
-                            </div>
-
-                            <div class="member-info">
-                                <h4>Shivam Sahu</h4>
-                                <span>Technical Secretary, Sophomore Year</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-3 col-md-6 portfolio-item filter-2020">
-                        <div class="member">
-                            <div class="member-img">
-                                <img src="assets/img/team/2020/piyush-tiwary.jpg" class="img-fluid" alt="">
-                                <div class="social">
-                                    <a href=""><i class="icofont-email"></i></a>
-                                </div>
-                            </div>
-
-                            <div class="member-info">
-                                <h4>Piyush Tiwary</h4>
-                                <span>Technical Secretary, Senior Year</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-3 col-md-6 portfolio-item filter-2020">
-                        <div class="member">
-                            <div class="member-img">
-                                <img src="assets/img/team/2020/shreya-sinha.jpg" class="img-fluid" alt="">
-                                <div class="social">
-                                    <a href=""><i class="icofont-email"></i></a>
-                                </div>
-                            </div>
-
-                            <div class="member-info">
-                                <h4>Shreya Sinha</h4>
-                                <span>Technical Secretary, UG Girls</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-3 col-md-6 portfolio-item filter-2020">
-                        <div class="member">
-                            <div class="member-img">
-                                <img src="assets/img/team/2020/nidhi-jha.jpg" class="img-fluid" alt="">
-                                <div class="social">
-                                    <a href=""><i class="icofont-email"></i></a>
-                                </div>
-                            </div>
-
-                            <div class="member-info">
-                                <h4>Nidhi Jha</h4>
-                                <span>Technical Secretary, PG Girls</span>
-                            </div>
-                        </div>
-                    </div>
-
                     <div class="col-lg-3 col-md-6 portfolio-item filter-2020">
                         <div class="member">
                             <div class="member-img">
@@ -619,6 +621,22 @@
                             <div class="member-info">
                                 <h4>Naman Kumar</h4>
                                 <span>Technical Secretary, Masters</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 portfolio-item filter-2021">
+                        <div class="member">
+                            <div class="member-img">
+                                <img src="assets/img/team/2021/sunil.jpg" class="img-fluid" alt="">
+                                <div class="social">
+                                    <a href="mailto:sunil_1921me01@iitp.ac.in"><i class="icofont-email"></i></a>
+                                </div>
+                            </div>
+
+                            <div class="member-info">
+                                <h4>Sunil</h4>
+                                <span>Technical Secretary, PhD</span>
                             </div>
                         </div>
                     </div>
