--- a/index.html
+++ b/index.html
@@ -373,8 +373,8 @@
                 <div class="row" data-aos="fade-up" data-aos-delay="100">
                     <div class="col-lg-12 d-flex justify-content-center">
                         <ul id="portfolio-flters">
-                            <li data-filter="*" class="filter-active">All</li>
-                            <li data-filter=".filter-2021">2021-2022</li>
+                            <!-- <li data-filter="*" class="filter-active">All</li> -->
+                            <li data-filter=".filter-2021" class="filter-active">2021-2022</li>
                             <li data-filter=".filter-2020">2020-2021</li>
                         </ul>
                     </div>
