Minor Wording Changes

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <h1>Welcome to <span>STC!</span>
             </h1>
             <h4><span>S</span>tudent <span>T</span>echnical <span>C</span>ouncil, IIT Patna</h4>
-            <h2>Explore our clubs and projects!</h2>
+            <h2>Explore our technical clubs and culture!</h2>
             <div class="d-flex">
                 <a href="index.html#clubs" class="btn-get-started scrollto">See More</a>
                 <!-- <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox btn-watch-video" data-vbtype="video" data-autoplay="true"> Watch Video <i class="icofont-play-alt-2"></i></a> -->
@@ -428,7 +428,7 @@
 
                             <div class="member-info">
                                 <h4>Satyam Shukla</h4>
-                                <span>General Technical, Technical Affairs</span>
+                                <span>General Secretary, Technical Affairs Council</span>
                             </div>
                         </div>
                     </div>
