New Team Members Updated

--- a/index.html
+++ b/index.html
@@ -374,18 +374,19 @@
                     <div class="col-lg-12 d-flex justify-content-center">
                         <ul id="portfolio-flters">
                             <!-- <li data-filter="*" class="filter-active">All</li> -->
-                            <li data-filter=".filter-2021" class="filter-active">2021-2022</li>
+                            <li data-filter=".filter-2022" class="filter-active">2022-2023</li>
+                            <li data-filter=".filter-2021">2021-2022</li>
                             <li data-filter=".filter-2020">2020-2021</li>
                         </ul>
                     </div>
                 </div>
 
                 <div class="position-title">
-                    <h3>PIC & General Secretary</h3>
+                    <h3>PIC and General Secretary</h3>
                 </div>
 
                 <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-                    <div class="col-lg-3 col-md-6 portfolio-item d-flex align-items-stretch filter-2021">
+                    <div class="col-lg-3 col-md-6 portfolio-item d-flex align-items-stretch filter-2021 filter-2022">
                         <div class="member">
                             <div class="member-img">
                                 <img src="assets/img/team/2021/dr.sujoy.jpg" class="img-fluid" alt="">
@@ -417,7 +418,23 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-6 portfolio-item d-flex align-items-stretch filter-2021 filter-2020">
+                    <div class="col-lg-3 col-md-6 portfolio-item filter-2022">
+                        <div class="member">
+                            <div class="member-img">
+                                <img src="assets/img/team/2022/Shivam.jpg" class="img-fluid" alt="">
+                                <div class="social">
+                                    <a href="mailto:gensec_tech@iitp.ac.in"><i class="icofont-email"></i></a>
+                                </div>
+                            </div>
+
+                            <div class="member-info">
+                                <h4>Shivam Sahu</h4>
+                                <span>General Secretary, Technical Affairs</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 portfolio-item filter-2021 filter-2020">
                         <div class="member">
                             <div class="member-img">
                                 <img src="assets/img/team/2021/satyam.jpg" class="img-fluid" alt="">
@@ -428,7 +445,7 @@
 
                             <div class="member-info">
                                 <h4>Satyam Shukla</h4>
-                                <span>General Secretary, Technical Affairs Council</span>
+                                <span>General Secretary, Technical Affairs</span>
                             </div>
                         </div>
                     </div>
@@ -440,6 +457,22 @@
                 </div>
 
                 <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+
+                    <div class="col-lg-3 col-md-6 portfolio-item filter-2022">
+                        <div class="member">
+                            <div class="member-img">
+                                <img src="assets/img/team/2022/HarshSingh.png" class="img-fluid" alt="">
+                                <div class="social">
+                                    <a href="mailto:harsh_2101cb28@iitp.ac.in"><i class="icofont-email"></i></a>
+                                </div>
+                            </div>
+
+                            <div class="member-info">
+                                <h4>Harsh Singh</h4>
+                                <span>Technical Secretary, Sophomore Year</span>
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="col-lg-3 col-md-6 portfolio-item filter-2021">
                         <div class="member">
@@ -460,7 +493,7 @@
                     <div class="col-lg-3 col-md-6 portfolio-item filter-2020">
                         <div class="member">
                             <div class="member-img">
-                                <img src="assets/img/team/2020/shivam-sahu.jpg" class="img-fluid" alt="">
+                                <img src="assets/img/team/2022/Shivam.jpg" class="img-fluid" alt="">
                                 <div class="social">
                                     <a href=""><i class="icofont-email"></i></a>
                                 </div>
@@ -469,6 +502,22 @@
                             <div class="member-info">
                                 <h4>Shivam Sahu</h4>
                                 <span>Technical Secretary, Sophomore Year</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 portfolio-item filter-2022">
+                        <div class="member">
+                            <div class="member-img">
+                                <img src="assets/img/team/2021/rishikesh.jpg" class="img-fluid" alt="">
+                                <div class="social">
+                                    <a href="mailto:rishikesh_2001cs85@iitp.ac.in"><i class="icofont-email"></i></a>
+                                </div>
+                            </div>
+
+                            <div class="member-info">
+                                <h4>Rishikesh Devanathan</h4>
+                                <span>Technical Secretary, Junior Year</span>
                             </div>
                         </div>
                     </div>
@@ -485,6 +534,22 @@
                             <div class="member-info">
                                 <h4>Shubham Kumar</h4>
                                 <span>Technical Secretary, Junior Year</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 portfolio-item filter-2022">
+                        <div class="member">
+                            <div class="member-img">
+                                <img src="assets/img/team/2022/Omkar.jpg" class="img-fluid" alt="">
+                                <div class="social">
+                                    <a href="mailto:omkar_1901ee43@iitp.ac.in"><i class="icofont-email"></i></a>
+                                </div>
+                            </div>
+
+                            <div class="member-info">
+                                <h4>Omkar Deshpande</h4>
+                                <span>Technical Secretary, Senior Year</span>
                             </div>
                         </div>
                     </div>
@@ -517,6 +582,22 @@
                             <div class="member-info">
                                 <h4>Piyush Tiwary</h4>
                                 <span>Technical Secretary, Senior Year</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 portfolio-item filter-2022">
+                        <div class="member">
+                            <div class="member-img">
+                                <img src="assets/img/team/2022/AnushkaPandey.jpg" class="img-fluid" alt="">
+                                <div class="social">
+                                    <a href="mailto:anushka_2001cs09@iitp.ac.in"><i class="icofont-email"></i></a>
+                                </div>
+                            </div>
+
+                            <div class="member-info">
+                                <h4>Kalpana Bishnoi</h4>
+                                <span>Technical Secretary, UG Girls</span>
                             </div>
                         </div>
                     </div>
@@ -561,6 +642,23 @@
 
                 <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
+
+                    <div class="col-lg-3 col-md-6 portfolio-item filter-2022">
+                        <div class="member">
+                            <div class="member-img">
+                                <img src="assets/img/team/2022/Simmi.jpg" class="img-fluid" alt="">
+                                <div class="social">
+                                    <a href="mailto:simmi_2021EE34@iitp.ac.in"><i class="icofont-email"></i></a>
+                                </div>
+                            </div>
+
+                            <div class="member-info">
+                                <h4>Simmi Perveen</h4>
+                                <span>Technical Secretary, PG Girls</span>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="col-lg-3 col-md-6 portfolio-item filter-2021">
                         <div class="member">
                             <div class="member-img">
@@ -593,6 +691,22 @@
                         </div>
                     </div>
 
+                    <div class="col-lg-3 col-md-6 portfolio-item filter-2022">
+                        <div class="member">
+                            <div class="member-img">
+                                <img src="assets/img/team/2022/Suman.jpg" class="img-fluid" alt="">
+                                <div class="social">
+                                    <a href="mailto:suman_2111mc13@iitp.ac.in"><i class="icofont-email"></i></a>
+                                </div>
+                            </div>
+
+                            <div class="member-info">
+                                <h4>Suman Saurabh</h4>
+                                <span>Technical Secretary, Masters</span>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="col-lg-3 col-md-6 portfolio-item filter-2021">
                         <div class="member">
                             <div class="member-img">
@@ -621,6 +735,22 @@
                             <div class="member-info">
                                 <h4>Naman Kumar</h4>
                                 <span>Technical Secretary, Masters</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 portfolio-item filter-2022">
+                        <div class="member">
+                            <div class="member-img">
+                                <img src="assets/img/team/2022/PKJha.png" class="img-fluid" alt="">
+                                <div class="social">
+                                    <a href="mailto:punyesh_2121ee27@iitp.ac.in"><i class="icofont-email"></i></a>
+                                </div>
+                            </div>
+
+                            <div class="member-info">
+                                <h4>Punyesh Kumar Jha</h4>
+                                <span>Technical Secretary, PhD</span>
                             </div>
                         </div>
                     </div>
