--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
                             </div>
 
                             <div class="member-info">
-                                <h4>Kalpana Bishnoi</h4>
+                                <h4>Anushka Pandey</h4>
                                 <span>Technical Secretary, UG Girls</span>
                             </div>
                         </div>
