Added Finance Club

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                             <li><a href="sparkonics.html">Sparkonics</a></li>
                             <li><a href="scme.html">SCME</a></li>
                             <li><a href="ace.html">ACE</a></li>
+                            <li><a href="finance.html">Finance</a></li>
                             <li><a href="chessx.html">ChESSx</a></li>
                             <li><a href="apclub.html">AP Club</a></li>
                             <li><a href="rnaclub.html">RnA Club</a></li>
@@ -175,6 +176,23 @@
                             <div class="club-info">
                                 <a href="https://www.linkedin.com/company/tinkerers-lab-iitp" class="portfolio-lightbox preview-link" title="LinkedIn"><i class='bx bxl-linkedin-square'></i></a>
                                 <a href="https://instagram.com/tinkerers_lab_iitp" class="portfolio-lightbox preview-link" title="Instagram"><i class='bx bxl-instagram'></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                        <div class="icon-box">
+                            <div class="icon">
+                                <img src="assets/img/club-pics/Finance/Finance Club IITP Logo.png">
+                            </div>
+                            <h4><a href="finance.html">Finance Club</a></h4>
+                            <p>Finance Club is the fastest growing club of IIT Patna. Focused on consulting, investing, marketing & product management, we aim to win national competitions, create opportunities for all and encourage skill building in these
+                                sectors. Our motto is to create legacy culture of finance at IIT Patna, and rising to the top-student run clubs in India.
+                            </p>
+                            <div class="club-info">
+                                <a href="https://www.youtube.com/channel/UCmqNUY6Gaacota4U4sf9ZWg" class="portfolio-lightbox preview-link" title="Twitter"><i class='bx bxl-youtube'></i></a>
+                                <a href="https://www.linkedin.com/company/finance-club-iit-patna" class="portfolio-lightbox preview-link" title="LinkedIn"><i class='bx bxl-linkedin-square'></i></a>
+                                <a href="https://www.instagram.com/financeclub.iitp/" class="portfolio-lightbox preview-link" title="Instagram"><i class='bx bxl-instagram'></i></a>
                             </div>
                         </div>
                     </div>
@@ -386,7 +404,23 @@
                 </div>
 
                 <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-                    <div class="col-lg-3 col-md-6 portfolio-item d-flex align-items-stretch filter-2021 filter-2022">
+                    <div class="col-lg-3 col-md-6 portfolio-item d-flex align-items-stretch filter-2022">
+                        <div class="member">
+                            <div class="member-img">
+                                <img src="assets/img/team/2022/AKGupta.jpg" class="img-fluid" alt="">
+                                <div class="social">
+                                    <a href=""><i class="icofont-email"></i></a>
+                                </div>
+                            </div>
+
+                            <div class="member-info">
+                                <h4>Dr. Anoop Kumar Gupta</h4>
+                                <span>PIC Technical Affairs</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 portfolio-item d-flex align-items-stretch filter-2021">
                         <div class="member">
                             <div class="member-img">
                                 <img src="assets/img/team/2021/dr.sujoy.jpg" class="img-fluid" alt="">
