--- a/finance.html
+++ b/finance.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>RnA Club</title>
+    <title>Finance</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -48,8 +48,8 @@
                             <li><a href="sparkonics.html">Sparkonics</a></li>
                             <li><a href="scme.html">SCME</a></li>
                             <li><a href="ace.html">ACE</a></li>
-                            <li><a href="chessx.html">ChESSx</a></li>
                             <li><a href="finance.html">Finance</a></li>
+                            <li><a href="chessx.html">ChESSx</a></li>
                             <li><a href="apclub.html">AP Club</a></li>
                             <li><a href="rnaclub.html">RnA Club</a></li>
                             <li><a href="tinkerers.html">Tinkerer’s Lab</a></li>
@@ -76,10 +76,10 @@
             <div class="container">
 
                 <div class="d-flex justify-content-between align-items-center">
-                    <h2>RnA Club</h2>
+                    <h2>Finance Club</h2>
                     <ol>
                         <li><a href="index.html">Home</a></li>
-                        <li>RnA Club</li>
+                        <li>Finance Club</li>
                     </ol>
                 </div>
 
@@ -94,15 +94,16 @@
                 <div class="row gy-4">
 
                     <div class="slides col-lg-8">
-                        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQILS84-T70RihEMX5-_4rdtHfyhCOKhLjggRqBggTiahrxQsL6n8pn_-s_0XPvkjxbwuFYa3UCFLuK/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="100%" allowfullscreen="true" mozallowfullscreen="true"
+                        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTihuRKpNqS8UHMPugPN9kVoJSQ9b2CR4uIp_8b6L7K9eYRGkFGQCk8eUikR13yJw/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="100%" allowfullscreen="true" mozallowfullscreen="true"
                             webkitallowfullscreen="true"></iframe>
                     </div>
 
                     <div class="col-lg-4">
                         <div class="portfolio-info">
-                            <h3>RnA Club</h3>
+                            <h3>Finance Club</h3>
                             <p>
-                                RnA or Robotics and Aviation Club of IIT Patna is a newly formed club that focuses on drones, MAVs (Micro air Vehicles), and aviation robotics. Here in RnA club, we all are family without any partiality.
+                                Finance Club is the fastest growing club of IIT Patna. Focused on consulting, investing, marketing & product management, we aim to win national competitions, create opportunities for all and encourage skill building in these sectors. Our motto is to create
+                                legacy culture of finance at IIT Patna, and rising to the top-student run clubs in India.
                             </p>
                         </div>
                     </div>
