--- a/sparkonics.html
+++ b/sparkonics.html
@@ -49,6 +49,7 @@
                             <li><a href="scme.html">SCME</a></li>
                             <li><a href="ace.html">ACE</a></li>
                             <li><a href="chessx.html">ChESSx</a></li>
+                            <li><a href="finance.html">Finance</a></li>
                             <li><a href="apclub.html">AP Club</a></li>
                             <li><a href="rnaclub.html">RnA Club</a></li>
                             <li><a href="tinkerers.html">Tinkerer’s Lab</a></li>
