--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100" onclick="location.href='njack.html';" style="cursor: pointer;">
                         <div class="icon-box">
                             <div class="icon">
                                 <img src="assets/img/club-pics/NJACK/logo.png">
@@ -164,7 +164,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100" onclick="location.href='tinkerers.html';" style="cursor: pointer;">
                         <div class="icon-box">
                             <div class="icon">
                                 <img src="assets\img\club-pics\Tinkerers Lab\logo.png">
@@ -180,7 +180,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100" onclick="location.href='finance.html';" style="cursor: pointer;">
                         <div class="icon-box">
                             <div class="icon">
                                 <img src="assets/img/club-pics/Finance/Finance Club IITP Logo.png">
@@ -197,7 +197,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100" onclick="location.href='chessx.html';" style="cursor: pointer;">
                         <div class="icon-box">
                             <div class="icon">
                                 <img src="assets\img\club-pics\Chessx\ChESSx Logo.jpg">
@@ -214,7 +214,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100" onclick="location.href='apclub.html';" style="cursor: pointer;">
                         <div class="icon-box">
                             <div class="icon">
                                 <img src="assets\img\club-pics\Astronomy & Particle Physics Club\APC IIT Patna logo_png.png">
@@ -232,7 +232,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100" onclick="location.href='ace.html';" style="cursor: pointer;">
                         <div class="icon-box">
                             <div class="icon">
                                 <img src="assets\img\club-pics\ACE\ACE logo.png">
@@ -251,7 +251,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100" onclick="location.href='mates.html';" style="cursor: pointer;">
                         <div class="icon-box">
                             <div class="icon">
                                 <img src="assets\img\club-pics\MatES\Mlogo.png">
@@ -269,7 +269,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100" onclick="location.href='sparkonics.html';" style="cursor: pointer;">
                         <div class="icon-box">
                             <div class="icon">
                                 <img src="assets\img\club-pics\Sparkonics\logo.jpeg">
@@ -285,7 +285,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100" onclick="location.href='scme.html';" style="cursor: pointer;">
                         <div class="icon-box">
                             <div class="icon">
                                 <img src="assets\img\club-pics\SCME\logo.jpg">
@@ -302,7 +302,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100" onclick="location.href='rnaclub.html';" style="cursor: pointer;">
                         <div class="icon-box">
                             <div class="icon">
                                 <img src="assets\img\club-pics\RnA Club\RnA.png">
