--- a/techseason/index.html
+++ b/techseason/index.html
@@ -51,7 +51,7 @@
                                 <li><a href="./leaderboard.html">Leaderboard</a></li>
                                 <li><a href="../index.html">STC</a></li>
                                 <li><a href="./contact.html">Contact</a></li>
-                                <li class="cta"><a href="./ictc.html">ICTC 1.0</a></li>
+                                <li class="cta"><a href="./ictc.html">ICTC 2.0</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -61,21 +61,23 @@
             </div>
         </header>
 
+        <!-- The hero section starts -->
         <div class="site-section site-hero">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-10">
                         <!-- <span class="d-block mb-3 caption" data-aos="fade-up" data-aos-delay="100">Conference 2019</span> -->
-                        <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">Tech Season '20</h1>
-                        <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">Feb to April</span>
+                        <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">Tech Season '23</h1>
+                        <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">Jan to April</span>
                         <a href="./ictc.html" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>ICTC
-								1.0</span></a>
+								2.0</span></a>
                         <a href="./leaderboard.html" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>Leaderboard</span></a>
                         <a href="./housedivision.html" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>House Division</span></a>
                     </div>
                 </div>
             </div>
         </div>
+        <!-- The hero section ends -->
 
         <div class="site-section" id="site-events">
             <div class="container">
