--- a/techseason/housedivision.html
+++ b/techseason/housedivision.html
@@ -166,7 +166,7 @@
 
     <script type="text/javascript">
         $.ajax({
-            url: 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQ_iShO_Q7piQiBQZqry3YFrxuomEXYqd4BQc8f9Z4H2fDhAms6up3NUDuaiTYmfN_p-Ihr-tG0HsGf/pub?gid=0&single=true&output=csv',
+            url: 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRM17FJlUXYhCk_8976nlMIizdHR_zDEbJwDDhdUcDdEXjKMEzqIq9tTR86rguStKhYn7pCw26Q2San/pub?gid=0&single=true&output=csv',
             success: loadDataToState,
             error: function() {
                 $('#leader-div').html('<p>Leaderboard could not be fetched.</p>');
@@ -191,28 +191,185 @@
                 return;
             }
 
-            for (var i = 0; i < rows.length; i++) {
+            for (var i = 3; i < rows.length; i++) {
                 var cells = rows[i].split(',');
                 if (cells.length == 0) {
                     $('#leader-div').html('<p>Data could not be parsed.</p>');
                     return;
                 }
+                if(cells[0].length != 0){
                 auriga.push({
                     roll: cells[0],
-                    name: cells[1]
-                })
-                pegasus.push({
+                    name: 'B.Tech 4th Year'
+                })}
+                if(cells[1].length != 0){
+                auriga.push({
+                    roll: cells[1],
+                    name: 'B.Tech 3rd Year'
+                })}
+                if(cells[2].length != 0){
+                auriga.push({
                     roll: cells[2],
-                    name: cells[3]
-                })
-                cassiopeia.push({
+                    name: 'B.Tech 2nd Year'
+                })}
+                if(cells[3].length != 0){
+                auriga.push({
+                    roll: cells[3],
+                    name: 'B.Tech 1st Year'
+                })}
+                if(cells[4].length != 0){
+                auriga.push({
                     roll: cells[4],
-                    name: cells[5]
-                })
+                    name: 'M.Tech 1st Year'
+                })}
+                if(cells[5].length != 0){
+                auriga.push({
+                    roll: cells[5],
+                    name: 'MSc 1st Year'
+                })}
+
+
+                if(cells[9].length != 0){
+                pegasus.push({
+                    roll: cells[9],
+                    name: 'B.Tech 4th Year'
+                })}
+                if(cells[10].length != 0){
+                pegasus.push({
+                    roll: cells[10],
+                    name: 'B.Tech 3rd Year'
+                })}
+                if(cells[11].length != 0){
+                pegasus.push({
+                    roll: cells[11],
+                    name: 'B.Tech 2nd Year'
+                })}
+                if(cells[12].length != 0){
+                pegasus.push({
+                    roll: cells[12],
+                    name: 'B.Tech 1st Year'
+                })}
+                if(cells[13].length != 0){
+                pegasus.push({
+                    roll: cells[13],
+                    name: 'MSc 1st Year'
+                })}
+                if(cells[14].length != 0){
+                pegasus.push({
+                    roll: cells[14],
+                    name: 'MSc 2nd Year'
+                })}
+                if(cells[15].length != 0){
+                pegasus.push({
+                    roll: cells[15],
+                    name: 'M.Tech 1st Year'
+                })}
+                if(cells[16].length != 0){
+                pegasus.push({
+                    roll: cells[16],
+                    name: 'M.Tech 2nd Year'
+                })}
+
+
+                if(cells[18].length != 0){
+                cassiopeia.push({
+                    roll: cells[18],
+                    name: 'B.Tech 4th Year'
+                })}
+                if(cells[19].length != 0){
+                cassiopeia.push({
+                    roll: cells[19],
+                    name: 'B.Tech 3rd Year'
+                })}
+                if(cells[20].length != 0){
+                cassiopeia.push({
+                    roll: cells[20],
+                    name: 'B.Tech 2nd Year'
+                })}
+                if(cells[21].length != 0){
+                cassiopeia.push({
+                    roll: cells[21],
+                    name: 'B.Tech 1st Year'
+                })}
+                if(cells[22].length != 0){
+                cassiopeia.push({
+                    roll: cells[22],
+                    name: 'MSc 1st Year'
+                })}
+                if(cells[23].length != 0){
+                cassiopeia.push({
+                    roll: cells[23],
+                    name: 'MSc 2nd Year'
+                })}
+                if(cells[24].length != 0){
+                cassiopeia.push({
+                    roll: cells[24],
+                    name: 'M.Tech 1st Year'
+                })}
+                if(cells[25].length != 0){
+                cassiopeia.push({
+                    roll: cells[25],
+                    name: 'M.Tech 2nd Year'
+                })}
+
+
+                if(cells[27].length != 0){
                 draco.push({
-                    roll: cells[6],
-                    name: cells[7]
-                })
+                    roll: cells[27],
+                    name: 'B.Tech 4th Year'
+                })}
+                if(cells[28].length != 0){
+                draco.push({
+                    roll: cells[28],
+                    name: 'B.Tech 3rd Year'
+                })}
+                if(cells[29].length != 0){
+                draco.push({
+                    roll: cells[29],
+                    name: 'B.Tech 2nd Year'
+                })}
+                if(cells[30].length != 0){
+                draco.push({
+                    roll: cells[30],
+                    name: 'B.Tech 1st Year'
+                })}
+                if(cells[31].length != 0){
+                draco.push({
+                    roll: cells[31],
+                    name: 'MSc 1st Year'
+                })}
+                if(cells[32].length != 0){
+                draco.push({
+                    roll: cells[32],
+                    name: 'MSc 2nd Year'
+                })}
+                if(cells[33].length != 0){
+                draco.push({
+                    roll: cells[33],
+                    name: 'M.Tech 1st Year'
+                })}
+                if(cells[34].length != 0){
+                draco.push({
+                    roll: cells[34],
+                    name: 'M.Tech 2nd Year'
+                })}
+
+                
+
+
+
+                // pegasus.push({
+                //     roll: cells[2],
+                //     name: cells[3]
+                // })
+                // cassiopeia.push({
+                //     roll: cells[4],
+                //     name: cells[5]
+                // })
+                // draco.push({
+                //     roll: cells[6],
+                //     name: cells[7]
+                // })
                 aurigaClone = auriga;
                 pegasusClone = pegasus;
                 cassiopeiaClone = cassiopeia;
@@ -235,7 +392,7 @@
                         <option ${auriga.length==0 && pegasus.length==0 &&cassiopeia.length!=0 && draco.length==0?'selected':''} value="cassiopeia" id="cassiopeia">Cassiopeia</option>
                         <option ${auriga.length==0 && pegasus.length==0 &&cassiopeia.length==0 && draco.length!=0?'selected':''} value="draco" id="draco">Draco</option>
                         </select>
-                        <thead><tr class="bg-primary"><th scope="col">Roll No.</th><th scope="col">Name</th><th scope="col">House</th></tr></thead><tbody>`;
+                        <thead><tr class="bg-primary"><th scope="col">Roll No.</th><th scope="col">Batch</th><th scope="col">House</th></tr></thead><tbody>`;
             for (var i = 0; i < auriga.length; i++) {
                 table += '<tr>';
                 table += '<td>' + auriga[i].roll + '</td>';
