--- a/techseason/index.html
+++ b/techseason/index.html
@@ -92,46 +92,52 @@
                 <div class="row mb-5">
 
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-5 blog-entry" data-aos="fade-up" data-aos-delay="200">
-                        <div class="pricing border-primary">
+                        <div class="pricing border-primary" style="height:440px; position: relative;">
                             <a href="https://www.facebook.com/dsciitpatna/" class="d-block mb-4">
                                 <img src="./images/dsc_hack.jpg" alt="Image" class="img-fluid">
                             </a>
                             <h2 class="mb-4"><a href="https://www.facebook.com/dsciitpatna/">Hack O' Latte</a></h2>
                             <div class="mb-4 post-meta d-flex align-items-center">
-                                <div><span><a href="https://www.facebook.com/dsciitpatna/">8 Feb - 9 Feb</a></span>
-                                </div>
+                                <!-- <div> -->
+                                    <span><a href="https://www.facebook.com/dsciitpatna/">8 Feb - 9 Feb</a></span>
+                                <!-- </div> -->
                             </div>
-                            <p>By DSC (Developer Student Club)
+                            <p style="position:absolute;bottom:20px;">By DSC (Developer Student Club)</p>
                         </div>
                     </div>
 
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-5 blog-entry" data-aos="fade-up" data-aos-delay="200">
-                        <div class="pricing border-primary">
+                        <div class="pricing border-primary" style="height:440px; position:relative;">
                             <a href="https://www.facebook.com/ACE.IITP" class="d-block mb-4">
                                 <img src="./images/ace_sam.jpg" alt="Image" class="img-fluid">
                             </a>
                             <h2 class="mb-4"><a href="https://www.facebook.com/ACE.IITP">Samnivesha</a></h2>
                             <div class="mb-4 post-meta d-flex align-items-center">
-                                <div><span><a href="https://www.facebook.com/ACE.IITP">15 Feb - 16 Feb</a></span></div>
-                            </div>
-                            <p>By ACE (Association of Civil Engineers)
+                                <!-- <div> -->
+                                    <span><a href="https://www.facebook.com/ACE.IITP">15 Feb - 16 Feb</a></span></div>
+                            <!-- </div> -->
+                            <p style="position:absolute;bottom:20px;">By ACE (Association of Civil Engineers)</p>
                         </div>
                     </div>
 
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-5 blog-entry" data-aos="fade-up" data-aos-delay="300">
-                        <div class="pricing border-primary">
+                        <div class="pricing border-primary" style="height:440px; position: relative;">
+                            <!-- <div class="d-block mb-4"> -->
                             <a href="https://www.facebook.com/njack.iitp" class="d-block mb-4">
-                                <img src="./images/njack_apei.png" alt="Image" class="img-fluid">
+                                <img src="./images/njack_apei.png" alt="Image" 
+                                class=" img-fluid"
+                                />
                             </a>
+                        <!-- </div> -->
                             <h2 class="mb-4"><a href="https://www.facebook.com/njack.iitp">Apeireon</a></h2>
                             <div class="mb-4 post-meta d-flex align-items-center">
-                                <div><span><a href="https://www.facebook.com/njack.iitp">4 April - 5 April</a></span>
-                                </div>
+                                <!-- <div> -->
+                                    <span><a href="https://www.facebook.com/njack.iitp">4 April - 5 April</a></span>
+                                <!-- </div> -->
                             </div>
-                            <p>By NJACK (Not Just Another Computer Science K{c}lub)
+                            <p style="position:absolute;bottom:20px;">By NJACK (Not Just Another Computer Science K{c}lub)</p>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
