Added the event not started yet

--- a/techseason/housedivision.html
+++ b/techseason/housedivision.html
@@ -75,8 +75,9 @@
             </div>
         </div>
 
+        <h1 class="text-center" style="margin-bottom: 100px;">The event has not started yet. Stay tuned for further updates</h1>
         <div class="site-section">
-            <div class="container">
+            <div class="container" style="display: none;">
 
                 <!-- <h3 data-aos="fade-up" data-aos-delay="100">Tech Season Leaderboard</h3> -->
                 <p>Enter your Roll No. or Name to search or select the group to see all its entries</p>
