--- a/techseason/leaderboard.html
+++ b/techseason/leaderboard.html
@@ -87,8 +87,9 @@
         </div>
 
         <div class="site-section">
-            <div class="container">
-
+            <h1 class="text-center" style="margin-bottom: 100px;">The event has not started yet. Stay tuned for further updates</h1>
+            <div class="container" style="display: none;">
+                <h1 class="d-block mb-4 text-center" data-aos="fade-up" data-aos-delay="100">Leaderboard 2023</h1>
                 <div id="leader-div" class="mb-3" data-aos="fade-up" data-aos-delay="300">
                     <p>Leaderboard loading...</p>
                 </div>
