Added the Navbar and the footer

--- a/index.html
+++ b/index.html
@@ -953,7 +953,7 @@
                     &copy; Copyright <strong><span>Student Technical Council, IITP</span></strong>.
                 </div>
                 <div class="credits col-md-4 col-sm-12" style="text-align: right; ">
-                    Design from <a href="https://bootstrapmade.com/ ">BootstrapMade</a>
+                    Our Privacy Policy  <a href="TrackOn/Privacy.html">Read Here</a>
                 </div>
             </div>
             <!-- Copyright -->
