privacy policy page updated

--- a/index.html
+++ b/index.html
@@ -952,9 +952,9 @@
                 <div class="credits col-md-8 col-sm-12">
                     &copy; Copyright <strong><span>Student Technical Council, IITP</span></strong>.
                 </div>
-                <div class="credits col-md-4 col-sm-12" style="text-align: right; ">
+                <!-- <div class="credits col-md-4 col-sm-12" style="text-align: right; ">
                     Our Privacy Policy  <a href="TrackOn/Privacy.html">Read Here</a>
-                </div>
+                </div> -->
             </div>
             <!-- Copyright -->
             <!--Grid row-->
